added some paper info

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,9 @@
 title: Leif Van Holland
-description: Computer Graphics & Vision Research
+description: PhD candidate • Computer Graphics & Vision • 3D reconstruction & neural rendering
 theme: minima
+
+author: Leif Van Holland
+linkedin: https://www.linkedin.com/in/leif-van-holland/
+github: https://github.com/leifvan
+email: mailto:holland@cs.uni-bonn.de
+cgpage: https://cg.cs.uni-bonn.de/person/m-sc-leif-van-holland
